Kubernetes/Future/IngressServices.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi-ingress
  namespace: shared-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tenant1.api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi-service
                port:
                  number: 80
    - host: tenant2.api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi-service
                port:
                  number: 80
